implemented-spring-security-for-api-validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/hms
 spring.datasource.username=root
 spring.datasource.password=root123
-
+spring.security.user.name=kirankhanalleo
+spring.security.user.password=helloworld
