--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/hms
 spring.datasource.username=root
 spring.datasource.password=root123
-spring.security.user.name=kirankhanalleo
-spring.security.user.password=helloworld
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+#spring.security.user.name=kirankhanalleo
+#spring.security.user.password=helloworld
