--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=root123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
 #spring.security.user.name=kirankhanalleo
 #spring.security.user.password=helloworld
