created-HotelDto-and-HotelPopulator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.password=root123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-#spring.security.user.name=kirankhanalleo
-#spring.security.user.password=helloworld
+spring.jpa.properties.hibernate.format_sql=true
+#auth.not.required.urls = /v3/api-docs,/v3/api-docs/**,/swagger-ui/**,/api/auth/**,/api/rooms/create/**
